--- a/Task/Q16/index.html
+++ b/Task/Q16/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promise</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <span id="1"></span>
+    <span id="2"></span>
+    <span id="3"></span>
+    <span id="4"></span>
+    <span id="5"></span>
     <script src="index.js"></script>
 </body>
 </html>
